--- a/poster.html
+++ b/poster.html
@@ -409,16 +409,15 @@ I2z1<sup> 1, <a class="orcid" href="https://orcid.org/12345"><img src="https://r
 </ul></li>
 <li>Дополнительные популярные источники информации о TI
 <ul>
-<li>Awesome-Threat-Intelligence (github.com/hslatman/awesome-threat-intelligence)</li>
-<li>TryHackMe лекторий (tryhackme.com/hacktivities)</li>
+<li><a href="github.com/hslatman/awesome-threat-intelligence">Awesome-Threat-Intelligence</a></li>
+<li><a href="tryhackme.com/hacktivities">TryHackMe лекторий</a></li>
 </ul></li>
 <li>Основные поставщики решений TI на российском рынке
 <ul>
-<li>Kasperskiy LAB</li>
-<li>Positive Technologies</li>
-<li>Перспективный мониторинг</li>
-<li>R-Vision</li>
-<li>Security Vision</li>
+<li><a href="https://opentip.kaspersky.com/"><strong>Kasperskiy LAB</strong></a></li>
+<li><a href="http://amtip.ru/"><strong>Перспективный мониторинг</strong></a></li>
+<li><a href="https://rvision.ru/products/tip"><strong>R-Vision</strong></a></li>
+<li><a href="https://www.securityvision.ru/products/tip/"><strong>Security Vision</strong></a></li>
 </ul></li>
 </ol>
 </div>
